# Gray-Scott-Reaction-Diffusion

./: Cargo.toml  README.md
resources/: reaction_diffusion_150.glslf
src/: gradient.rs  gradient_presets.rs  gray_scott_model.rs  lib.rs  lut_manager.rs  main.rs  model_presets.rs  nutrient_presets.rs  old_shader_main.rs  renderer.rs  utils.rs
src/shaders/: reaction_diffusion.wgsl  render.wgsl
