[package]
name = "gray_scott_reaction_diffusion"
version = "0.2.0"
authors = ["Zelda Hessler <zhessler@pm.me>"]
edition = "2018"

[dependencies]
circular-queue = "0.2.6"
dotenv = "0.15.0"
env_logger = "0.8.4"
itertools = "0.10.1"
log = "0.4.14"
pixels = "0.4.0"
rayon = "1.5.1"
winit = "0.25.0"
winit_input_helper = "0.10.0"
