[package]
name = "gray_scott_reaction_diffusion"
version = "0.2.0"
authors = ["Zelda Hessler <zhessler@pm.me>"]
edition = "2024"

[dependencies]
circular-queue = "0.2.6"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3"
itertools = "0.14.0"
log = "0.4.14"
pixels = "0.14.0"
rand = { version = "0.8.5", features = ["small_rng"] }
raw-window-handle = "0.5.2"
rayon = "1.5.1"
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.16.0"
wgpu = "0.17"
bytemuck = { version = "1.14", features = ["derive"] }
noise = "0.8.2"
fontdue = "0.8.0"
